// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute successful calls custom cid 1`] = `
Object {
  "data": Object {
    "result": "some simple text",
  },
  "debug": undefined,
  "jobRunID": "1",
  "result": "some simple text",
  "statusCode": 200,
}
`;

exports[`execute successful calls id not supplied 1`] = `
Object {
  "data": Object {
    "result": "Hello, <YOUR NAME HERE>",
  },
  "debug": undefined,
  "jobRunID": "1",
  "result": "Hello, <YOUR NAME HERE>",
  "statusCode": 200,
}
`;

exports[`execute successful calls simple cid 1`] = `
Object {
  "data": Object {
    "result": "Hello, <YOUR NAME HERE>",
  },
  "debug": undefined,
  "jobRunID": "1",
  "result": "Hello, <YOUR NAME HERE>",
  "statusCode": 200,
}
`;
